# rs-mix-bot

./: .gitignore  Cargo.toml  useful-commands.txt
migration/src/: lib.rs  m20250112_142737_add_basic_entities.rs
src/: main.rs
src/database/: connection.rs  mod.rs
src/database/entities/: discord.rs  game.rs  guild.rs  guild_user.rs  match.rs  mod.rs  player.rs  prelude.rs  queue.rs  queue_user.rs  team.rs  user.rs  user_team.rs
src/database/repository/: discord_repository.rs  game_repository.rs  guild_repository.rs  mod.rs  queue_repository.rs  user_repository.rs
src/discord/: client.rs  enums.rs  event.rs  mod.rs
src/discord/commands/: configure.rs  guild.rs  mod.rs  queue.rs
